Kritik an DeviceEventArgs-Abschnitt

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -280,11 +280,12 @@ In dieser Klasse werden die Charkterisiken gespeichert um sie nicht jedes mal ne
 
 \subsubsection{DeviceEventArgs}
 Dieses Event benachrichtigt Listener, falls sich der Verbindungsstatus seines Devices ändert.
-
+%%?? valle: schreiben wir jetzt gar nicht mehr Klassenbeschreibung drüber?
+%%valle: das ist doch kein Event! 
 \paragraph{Attribute:}
 \begin{itemize}
 	\item[+] \textbf{connected: Boolean}\\Ist true falls eine BLE Verbindung mit einem Device existiert und false falls nicht.
-	\item[+] \textbf{deviceName: String}\\Beinhaltet den Devicenamen des Devices, mit dem der Nutzer verbunden ist.
+	\item[+] \textbf{deviceName: String}\\Beinhaltet den Devicenamen des Devices, mit dem der Nutzer verbunden ist. %%bitte deutsch
 \end{itemize}
 
 \paragraph{Methoden:}
